--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-    "name": "laravel/laravel",
+    "name": "darren-glanville/personal-website",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "My personal website showcasing me.",
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
