--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "postcss": "^8.4.45",
         "postcss-nesting": "^13.0.0",
         "tailwindcss": "^3.4.11",
+        "tailwindcss-animated": "^1.1.2",
         "vite": "^5.0"
     }
 }
