--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "codeat3/blade-simple-icons": "^5.8",
         "filament/filament": "^3.2",
+        "guava/filament-icon-picker": "^2.0",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "livewire/livewire": "^3.5"
+        "livewire/livewire": "^3.5",
+        "postare/blade-mdi": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
