--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.45",
         "postcss-nesting": "^13.0.0",
+        "sass-embedded": "^1.78.0",
         "tailwindcss": "^3.4.11",
         "tailwindcss-animated": "^1.1.2",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "gsap": "^3.12.5"
     }
 }
