--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "sass-embedded": "^1.78.0",
         "tailwindcss": "^3.4.11",
         "tailwindcss-animated": "^1.1.2",
+        "tailwindcss-intersect": "^2.0.1",
         "vite": "^5.0"
     },
     "dependencies": {
